--- a/protractor/index.html
+++ b/protractor/index.html
@@ -7,6 +7,7 @@
 <body>
 	<h1>Hello World</h1>
 
+	<script src="bower_components/angular/angular.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
