--- a/protractor/index.html
+++ b/protractor/index.html
@@ -6,10 +6,9 @@
 </head>
 <body ng-app="myApp">
 
-	<div ng-controller="MainCtroller as main">
-		{{ main.title }}
+	<div class="main" ng-controller="MainController as main">
+		<h1>{{ main.message }}</h1>
 	</div>
-	<h1>Hello World</h1>
 
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="js/app.js"></script>
